[package]
name = "diem-config"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem diem-config"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
get_if_addrs = { version = "0.5.3", default-features = false }
log = { version = "0.4.11", features = ["serde"] }
mirai-annotations = "1.10.1"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["rc"], default-features = false }
serde_yaml = "0.8.14"
thiserror = "1.0.22"


bcs = "0.1.1"
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diem-crypto-derive = { path = "../crypto/crypto-derive", version = "0.1.0" }
diem-global-constants = { path = "../config/global-constants", version = "0.1.0"}
diem-logger = { path = "../common/logger", version = "0.1.0" }
diem-network-address = { path = "../network/network-address", version = "0.1.0" }
diem-network-address-encryption = { path = "management/network-address-encryption", version = "0.1.0" }
diem-secure-storage = { path = "../secure/storage", version = "0.1.0" }
diem-temppath = { path = "../common/temppath", version = "0.1.0" }
diem-types = { path = "../types", version = "0.1.0" }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }

[dev-dependencies]
diem-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["fuzzing"] }

[features]
default = []
fuzzing = ["diem-crypto/fuzzing", "diem-types/fuzzing"]
testing = []
diem_address = [
    "diem-types/diem_address",
    "diem-network-address/diem_address",
    "diem-network-address-encryption/diem_address",
    "diem-secure-storage/diem_address",

]
dfinance_address = [
    "diem-types/dfinance_address",
    "diem-network-address/dfinance_address",
    "diem-network-address-encryption/dfinance_address",
    "diem-secure-storage/dfinance_address",

]
ps_address = [
    "diem-types/ps_address",
    "diem-network-address/ps_address",
    "diem-network-address-encryption/ps_address",
    "diem-secure-storage/ps_address",
]
