[package]
name = "bytecode-verifier"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra bytecode verifier"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
mirai-annotations = "1.10.1"
petgraph = "0.5.1"

borrow-graph = { path = "../borrow-graph", version = "0.0.1" }
vm = { path = "../vm", version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }
libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../move-core/types", version = "0.1.0" }

[dev-dependencies]
invalid-mutations = { path = "invalid-mutations", version = "0.1.0" }

[features]
default = []
fuzzing = ["libra-types/fuzzing"]
libra_address = [
    "move-core-types/libra_address",
    "libra-types/libra_address",
    "vm/libra_address",
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "libra-types/dfinance_address",
    "vm/dfinance_address",
]
ps_address = [
    "move-core-types/ps_address",
    "libra-types/ps_address",
    "vm/ps_address",
]
