[package]
name = "compiler"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra compiler"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
bytecode-verifier = { path = "../bytecode-verifier", version = "0.1.0" }
ir-to-bytecode = { path = "ir-to-bytecode", version = "0.1.0" }
bytecode-source-map = { path = "bytecode-source-map", version = "0.1.0" }
compiled-stdlib = { path = "../stdlib/compiled",  version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }
libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
move-ir-types = { path = "../move-ir/types", version = "0.1.0" }
vm = { path = "../vm", version = "0.1.0" }
lcs = { path = "../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
structopt = "0.3.18"
serde_json = "1.0.58"

[features]
default = []
fuzzing = ["libra-types/fuzzing"]
libra_address = [
    "bytecode-verifier/libra_address",
    "libra-types/libra_address",
    "move-ir-types/libra_address",
    "vm/libra_address",
    "ir-to-bytecode/libra_address",
    "bytecode-source-map/libra_address",
    "compiled-stdlib/libra_address",

]
dfinance_address = [
    "bytecode-verifier/dfinance_address",
    "libra-types/dfinance_address",
    "move-ir-types/dfinance_address",
    "vm/dfinance_address",
    "ir-to-bytecode/dfinance_address",
    "bytecode-source-map/dfinance_address",
    "compiled-stdlib/dfinance_address",
]
ps_address = [
    "bytecode-verifier/ps_address",
    "libra-types/ps_address",
    "move-ir-types/ps_address",
    "vm/ps_address",
    "ir-to-bytecode/ps_address",
    "bytecode-source-map/ps_address",
    "compiled-stdlib/ps_address",
]
