[package]
name = "compiler"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem compiler"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.34"
bytecode-verifier = { path = "../bytecode-verifier", version = "0.1.0" }
ir-to-bytecode = { path = "ir-to-bytecode", version = "0.1.0" }
bytecode-source-map = { path = "bytecode-source-map", version = "0.1.0" }
compiled-stdlib = { path = "../stdlib/compiled",  version = "0.1.0" }
diem-types = { path = "../../types", version = "0.1.0" }
diem-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
move-ir-types = { path = "../move-ir/types", version = "0.1.0" }
vm = { path = "../vm", version = "0.1.0" }
bcs = "0.1.1"
structopt = "0.3.21"
serde_json = "1.0.60"

[features]
default = []
fuzzing = ["diem-types/fuzzing"]
diem_address = [
    "bytecode-verifier/diem_address",
    "diem-types/diem_address",
    "move-ir-types/diem_address",
    "vm/diem_address",
    "ir-to-bytecode/diem_address",
    "bytecode-source-map/diem_address",
    "compiled-stdlib/diem_address",

]
dfinance_address = [
    "bytecode-verifier/dfinance_address",
    "diem-types/dfinance_address",
    "move-ir-types/dfinance_address",
    "vm/dfinance_address",
    "ir-to-bytecode/dfinance_address",
    "bytecode-source-map/dfinance_address",
    "compiled-stdlib/dfinance_address",
]
ps_address = [
    "bytecode-verifier/ps_address",
    "diem-types/ps_address",
    "move-ir-types/ps_address",
    "vm/ps_address",
    "ir-to-bytecode/ps_address",
    "bytecode-source-map/ps_address",
    "compiled-stdlib/ps_address",
]
