[package]
name = "move-prover"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[dependencies]
# libra dependencies
move-lang = { path = "../move-lang", version = "0.0.1" }
spec-lang = { path = "spec-lang", version = "0.1.0" }
docgen = { path = "docgen", version = "0.1.0" }
abigen = { path = "abigen", version = "0.1.0" }
errmapgen = { path = "errmapgen", version = "0.1.0" }
bytecode = { path = "bytecode", version = "0.1.0"}
vm = { path = "../vm", version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }
libra-temppath = { path = "../../common/temppath", version = "0.1.0" }
libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
bytecode-source-map = { path = "../compiler/bytecode-source-map", version = "0.1.0" }
move-ir-types = { path = "../move-ir/types", version = "0.1.0" }

# external dependencies
async-trait = "0.1.41"
anyhow = "1.0.33"
clap = "2.33.3"
codespan = "0.8.0"
codespan-reporting = "0.8.0"
futures = "0.3.6"
handlebars = "3.5.0"
hex = "0.4.2"
itertools = "0.9.0"
log = "0.4.11"
num = "0.3.0"
pretty = "0.10.0"
rand = "0.7.3"
regex = "1.3.9"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
simplelog = "0.8.0"
once_cell = "1.4.1"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.6"

[dev-dependencies]
datatest-stable = { path = "../../common/datatest-stable", version = "0.1.0" }
test-utils = { path = "test-utils", version = "0.1.0" }
shell-words = "1.0.0"

[[test]]
name = "testsuite"
harness = false

[features]
libra_address = [
    "libra-types/libra_address",
    "vm/libra_address",
    "move-lang/libra_address",
    "bytecode-source-map/libra_address",
    "move-ir-types/libra_address",
]
dfinance_address = [
    "libra-types/dfinance_address",
    "vm/dfinance_address",
    "move-lang/dfinance_address",
    "bytecode-source-map/dfinance_address",
    "move-ir-types/dfinance_address",
]
ps_address = [
    "libra-types/ps_address",
    "vm/ps_address",
    "move-lang/ps_address",
    "bytecode-source-map/ps_address",
    "move-ir-types/ps_address"
]
