[package]
name = "stdlib"
version = "0.1.0"
edition = "2018"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra stdlib"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.33"
bytecode-verifier = { path = "../bytecode-verifier", version = "0.1.0" }
move-lang = { path = "../move-lang" }
move-prover = { path = "../move-prover" }
libra-crypto = { path = "../../crypto/crypto", version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }
libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
datatest-stable = { path = "../../common/datatest-stable", version = "0.1.0" }
lcs = { path = "../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
vm = { path = "../vm", version = "0.1.0" }
transaction-builder-generator = { path = "../transaction-builder/generator", version = "0.1.0" }

clap = "2.33.3"
log = "0.4.11"
rayon = "1.4.1"
sha2 = "0.9.1"

[features]
default = []
fuzzing = ["libra-types/fuzzing"]
libra_address = [
    "bytecode-verifier/libra_address",
    "libra-types/libra_address",
    "vm/libra_address",
    "move-lang/libra_address",
    "move-prover/libra_address",
    "transaction-builder-generator/libra_address",
]
dfinance_address = [
    "bytecode-verifier/dfinance_address",
    "libra-types/dfinance_address",
    "vm/dfinance_address",
    "move-lang/dfinance_address",
    "move-prover/dfinance_address",
    "transaction-builder-generator/dfinance_address",
]
ps_address = [
    "bytecode-verifier/ps_address",
    "libra-types/ps_address",
    "vm/ps_address",
    "move-lang/ps_address",
    "move-prover/ps_address",
    "transaction-builder-generator/ps_address",
]