[package]
name = "stdlib"
version = "0.1.0"
edition = "2018"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem stdlib"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.34"
bytecode-verifier = { path = "../bytecode-verifier", version = "0.1.0" }
move-lang = { path = "../move-lang" }
move-prover = { path = "../move-prover" }
diem-crypto = { path = "../../crypto/crypto", version = "0.1.0" }
diem-types = { path = "../../types", version = "0.1.0" }
diem-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
bcs = "0.1.1"
vm = { path = "../vm", version = "0.1.0" }
transaction-builder-generator = { path = "../transaction-builder/generator", version = "0.1.0" }

clap = "2.33.3"
log = "0.4.11"
rayon = "1.5.0"
sha2 = "0.9.2"
walkdir = "2.3.1"

[dev-dependencies]
datatest-stable = { path = "../../common/datatest-stable", version = "0.1.0" }

[features]
default = []
fuzzing = ["diem-types/fuzzing"]
diem_address = [
    "bytecode-verifier/diem_address",
    "diem-types/diem_address",
    "vm/diem_address",
    "move-lang/diem_address",
    "move-prover/diem_address",
    "transaction-builder-generator/diem_address",
]
dfinance_address = [
    "bytecode-verifier/dfinance_address",
    "diem-types/dfinance_address",
    "vm/dfinance_address",
    "move-lang/dfinance_address",
    "move-prover/dfinance_address",
    "transaction-builder-generator/dfinance_address",
]
ps_address = [
    "bytecode-verifier/ps_address",
    "diem-types/ps_address",
    "vm/ps_address",
    "move-lang/ps_address",
    "move-prover/ps_address",
    "transaction-builder-generator/ps_address",
]