[package]
name = "spec-lang"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[dependencies]
# diem dependencies
move-lang = { path = "../../move-lang", version = "0.0.1" }
bytecode-verifier = { path = "../../bytecode-verifier", version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }
diem-types = { path = "../../../types", version = "0.1.0" }
diem-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
bytecode-source-map = { path = "../../compiler/bytecode-source-map", version = "0.1.0" }
move-ir-types = { path = "../../move-ir/types", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }

# external dependencies
codespan = "0.8.0"
codespan-reporting = "0.8.0"
itertools = "0.9.0"
log = "0.4.11"
num = "0.3.0"
once_cell = "1.4.1"
regex = "1.4.2"
anyhow = "1.0.34"
serde = { version = "1.0.117", features = ["derive"] }

[dev-dependencies]
datatest-stable = { path = "../../../common/datatest-stable", version = "0.1.0" }
move-prover-test-utils = { path = "../test-utils", version = "0.1.0" }

[[test]]
name = "testsuite"
harness = false

[features]
diem_address = [
    "move-core-types/diem_address",
    "move-lang/diem_address",
    "bytecode-verifier/diem_address",
    "vm/diem_address",
    "diem-types/diem_address",
    "bytecode-source-map/diem_address",
    "move-ir-types/diem_address",
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "move-lang/dfinance_address",
    "bytecode-verifier/dfinance_address",
    "vm/dfinance_address",
    "diem-types/dfinance_address",
    "bytecode-source-map/dfinance_address",
    "move-ir-types/dfinance_address",
]
ps_address = [
    "move-core-types/ps_address",
    "move-lang/ps_address",
    "bytecode-verifier/ps_address",
    "vm/ps_address",
    "diem-types/ps_address",
    "bytecode-source-map/ps_address",
    "move-ir-types/ps_address",
]