[package]
name = "move-vm-runtime"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core Move execution logic"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fail = "0.4.0"
mirai-annotations = "1.10.1"
once_cell = "1.4.1"

bytecode-verifier = { path = "../../bytecode-verifier", version = "0.1.0" }
diem-crypto = { path = "../../../crypto/crypto", version = "0.1.0" }
diem-logger = { path = "../../../common/logger", version = "0.1.0" }
diem-infallible = { path = "../../../common/infallible", version = "0.1.0" }
diem-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-vm-natives = { path = "../natives", version = "0.1.0" }
move-vm-types = { path = "../types", version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }

[dev-dependencies]
anyhow = "1.0.34"
hex = "0.4.2"
proptest = "0.10.1"

compiler = { path = "../../compiler", version = "0.1.0" }
diem-state-view = { path = "../../../storage/state-view", version = "0.1.0" }
move-lang = { path = "../../move-lang", version = "0.0.1" }

[features]
default = []
debug_module = ["move-vm-natives/debug_module"]
fuzzing = ["move-vm-types/fuzzing"]
failpoints = ["fail/failpoints"]
diem_address = [
    "move-core-types/diem_address",
    "bytecode-verifier/diem_address",
    "move-vm-natives/diem_address",
    "move-vm-types/diem_address",
    "vm/diem_address",
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "bytecode-verifier/dfinance_address",
    "move-vm-natives/dfinance_address",
    "move-vm-types/dfinance_address",
    "vm/dfinance_address",
]
ps_address = [
    "move-core-types/ps_address",
    "bytecode-verifier/ps_address",
    "move-vm-natives/ps_address",
    "move-vm-types/ps_address",
    "vm/ps_address",
]