[package]
name = "compiled-stdlib"
version = "0.1.0"
edition = "2018"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem stdlib"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.34"
bytecode-verifier = { path = "../../bytecode-verifier", version = "0.1.0" }
diem-crypto = { path = "../../../crypto/crypto", version = "0.1.0" }
diem-types = { path = "../../../types", version = "0.1.0" }
diem-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
bcs = "0.1.1"
vm = { path = "../../vm", version = "0.1.0" }
stdlib = { path = "../../stdlib",  version = "0.1.0" }
once_cell = "1.4.1"
include_dir = "0.6.0"
sha2 = "0.9.2"

[features]
default = []
fuzzing = ["diem-types/fuzzing"]
diem_address = [
    "bytecode-verifier/diem_address",
    "diem-types/diem_address",
    "vm/diem_address",
    "stdlib/diem_address",
]
dfinance_address = [
    "bytecode-verifier/dfinance_address",
    "diem-types/dfinance_address",
    "vm/dfinance_address",
    "stdlib/dfinance_address",
]
ps_address = [
    "bytecode-verifier/ps_address",
    "diem-types/ps_address",
    "vm/ps_address",
    "stdlib/ps_address",
]
