[package]
name = "move-coverage"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Move VM code coverage"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
once_cell = "1.4.1"
petgraph = "0.5.1"
structopt = "0.3.21"
serde = { version = "1.0.117", default-features = false }
anyhow = "1.0.34"
codespan = { version = "0.8.0", features = ["serialization"] }
colored = "2.0.0"

bcs = "0.1.1"
diem-types = { path = "../../../types", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-ir-types = { path = "../../move-ir/types", version = "0.1.0" }
diem-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }
bytecode-source-map = { path = "../../compiler/bytecode-source-map", version = "0.1.0" }
bytecode-verifier = { path = "../../bytecode-verifier", version = "0.1.0" }

[features]
default = []
fuzzing = ["diem-types/fuzzing"]
diem_address = [
    "move-core-types/diem_address",
    "diem-types/diem_address",
    "move-ir-types/diem_address",
    "vm/diem_address",
    "bytecode-source-map/diem_address",
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "diem-types/dfinance_address",
    "move-ir-types/dfinance_address",
    "vm/dfinance_address",
    "bytecode-source-map/dfinance_address",
]
ps_address = [
    "move-core-types/ps_address",
    "diem-types/ps_address",
    "move-ir-types/ps_address",
    "vm/ps_address",
    "bytecode-source-map/ps_address"
]