[package]
name = "move-coverage"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra Move VM code coverage"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
once_cell = "1.4.1"
structopt = "0.3.18"
serde = { version = "1.0.116", default-features = false }
anyhow = "1.0.33"
codespan = { version = "0.8.0", features = ["serialization"] }
colored = "2.0.0"

lcs = { path = "../../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-types = { path = "../../../types", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-ir-types = { path = "../../move-ir/types", version = "0.1.0" }
libra-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }
bytecode-source-map = { path = "../../compiler/bytecode-source-map", version = "0.1.0" }

[features]
default = []
fuzzing = ["libra-types/fuzzing"]
libra_address = [
    "move-core-types/libra_address",
    "libra-types/libra_address",
    "move-ir-types/libra_address",
    "vm/libra_address",
    "bytecode-source-map/libra_address",
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "libra-types/dfinance_address",
    "move-ir-types/dfinance_address",
    "vm/dfinance_address",
    "bytecode-source-map/dfinance_address",
]
ps_address = [
    "move-core-types/ps_address",
    "libra-types/ps_address",
    "move-ir-types/ps_address",
    "vm/ps_address",
    "bytecode-source-map/ps_address"
]