[package]
name = "resource-viewer"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra genesis viewer"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
lcs = { path = "../../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-state-view = { path = "../../../storage/state-view", version = "0.1.0" }
libra-types = { path = "../../../types", version = "0.1.0"  }
libra-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-vm-runtime = { path = "../../move-vm/runtime", version = "0.1.0" }
move-vm-types = { path = "../../move-vm/types", version = "0.1.0" }
compiled-stdlib = { path = "../../stdlib/compiled",  version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }
vm-genesis = { path = "../vm-genesis", version = "0.1.0" }
serde_json = "1.0.58"
serde = { version = "1.0.116", features = ["derive", "rc"] }

anyhow = "1.0.33"
once_cell = "1.4.1"
hex = "0.4.2"

[features]
libra_address = [
    "move-core-types/libra_address",
    "libra-state-view/libra_address",
    "libra-types/libra_address",
    "move-core-types/libra_address",
    "move-vm-runtime/libra_address",
    "move-vm-types/libra_address",
    "compiled-stdlib/libra_address",
    "vm/libra_address",
    "vm-genesis/libra_address"
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "libra-state-view/dfinance_address",
    "libra-types/dfinance_address",
    "move-core-types/dfinance_address",
    "move-vm-runtime/dfinance_address",
    "move-vm-types/dfinance_address",
    "compiled-stdlib/dfinance_address",
    "vm/dfinance_address",
    "vm-genesis/dfinance_address"
]

ps_address = [
    "move-core-types/libra_address",
    "libra-state-view/libra_address",
    "libra-types/libra_address",
    "move-core-types/libra_address",
    "move-vm-runtime/libra_address",
    "move-vm-types/libra_address",
    "compiled-stdlib/libra_address",
    "vm/libra_address",
    "vm-genesis/libra_address"
]