[package]
name = "vm-genesis"
version = "0.1.0"
edition = "2018"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem vm genesis"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.34"
once_cell = "1.4.1"
rand = "0.7.3"

bytecode-verifier = { path = "../../bytecode-verifier", version = "0.1.0" }
bcs = "0.1.1"
diem-config = { path = "../../../config", version = "0.1.0" }
diem-crypto = { path = "../../../crypto/crypto", version = "0.1.0" }
diem-state-view = { path = "../../../storage/state-view", version = "0.1.0" }
diem-types = { path = "../../../types", version = "0.1.0" }
diem-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
diem-network-address = { path = "../../../network/network-address", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-vm-runtime = { path = "../../move-vm/runtime", version = "0.1.0"}
move-vm-types = { path = "../../move-vm/types", version = "0.1.0" }
compiled-stdlib = { path = "../../stdlib/compiled",  version = "0.1.0" }
transaction-builder = { path = "../../transaction-builder", version = "0.1.0"}
vm = { path = "../../vm", version = "0.1.0" }
diem-vm = { path = "../../diem-vm", version = "0.1.0" }

[dev-dependencies]
proptest = "0.10.1"
proptest-derive = "0.2.0"
diem-proptest-helpers = { path = "../../../common/proptest-helpers", version = "0.1.0" }

[features]
default = []
fuzzing = ["diem-types/fuzzing", "move-vm-types/fuzzing"]
diem_address = [
    "move-core-types/diem_address",
    "bytecode-verifier/diem_address",
    "diem-types/diem_address",
    "vm/diem_address",
    "move-vm-types/diem_address",
    "move-vm-runtime/diem_address",
    "diem-vm/diem_address",
    "diem-state-view/diem_address",
    "diem-config/diem_address",
    "diem-network-address/diem_address",
    "compiled-stdlib/diem_address",
    "transaction-builder/diem_address",
]

dfinance_address = [
    "move-core-types/dfinance_address",
    "bytecode-verifier/dfinance_address",
    "diem-types/dfinance_address",
    "vm/dfinance_address",
    "move-vm-types/dfinance_address",
    "move-vm-runtime/dfinance_address",
    "diem-vm/dfinance_address",
    "diem-state-view/dfinance_address",
    "diem-config/dfinance_address",
    "diem-network-address/dfinance_address",
    "compiled-stdlib/dfinance_address",
    "transaction-builder/dfinance_address",
]

ps_address = [
    "move-core-types/ps_address",
    "bytecode-verifier/ps_address",
    "diem-types/ps_address",
    "vm/ps_address",
    "move-vm-types/ps_address",
    "move-vm-runtime/ps_address",
    "diem-vm/ps_address",
    "diem-state-view/ps_address",
    "diem-config/ps_address",
    "diem-network-address/ps_address",
    'compiled-stdlib/ps_address',
    "transaction-builder/ps_address",
]
