[package]
name = "ir-to-bytecode-syntax"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra ir to bytecode syntax"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
codespan = { version = "0.8.0", features = ["serialization"] }
hex = "0.4.2"
move-ir-types = { path = "../../../move-ir/types", version = "0.1.0" }
move-core-types = { path = "../../../move-core/types", version = "0.1.0" }
libra-types = { path = "../../../../types", version = "0.1.0" }
libra-workspace-hack = { path = "../../../../common/workspace-hack", version = "0.1.0" }

[features]
default = []
fuzzing = ["libra-types/fuzzing"]
libra_address = [
    "move-core-types/libra_address",
    "move-ir-types/libra_address",
    "libra-types/libra_address",
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "move-ir-types/dfinance_address",
    "libra-types/dfinance_address",
]
ps_address = [
    "move-core-types/ps_address",
    "move-ir-types/ps_address",
    "libra-types/ps_address",
]