[package]
name = "ir-to-bytecode-syntax"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem ir to bytecode syntax"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.34"
codespan = { version = "0.8.0", features = ["serialization"] }
hex = "0.4.2"
move-ir-types = { path = "../../../move-ir/types", version = "0.1.0" }
move-core-types = { path = "../../../move-core/types", version = "0.1.0" }
diem-types = { path = "../../../../types", version = "0.1.0" }
diem-workspace-hack = { path = "../../../../common/workspace-hack", version = "0.1.0" }

[features]
default = []
fuzzing = ["diem-types/fuzzing"]
diem_address = [
    "move-core-types/diem_address",
    "move-ir-types/diem_address",
    "diem-types/diem_address",
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "move-ir-types/dfinance_address",
    "diem-types/dfinance_address",
]
ps_address = [
    "move-core-types/ps_address",
    "move-ir-types/ps_address",
    "diem-types/ps_address",
]